--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>ons.sdc.int.app</groupId>
   <artifactId>rhsvc</artifactId>
-  <version>0.1.31-SNAPSHOT</version>
+  <version>0.0.0</version>
   <packaging>jar</packaging>
 
-  <parent>
-    <groupId>uk.gov.ons.ctp.integration</groupId>
-    <artifactId>census-int-common-config</artifactId>
-    <version>0.0.17</version>
-  </parent>
-  <modelVersion>4.0.0</modelVersion>
 
-  <name>Census Integration RH Service</name>
-  <description>Census Integration RH Service</description>
+  <name>SDC : Integrations RH Service</name>
+  <description>SDC : Integrations RH Service</description>
 
   <properties>
     <skip.integration.tests>true</skip.integration.tests>
@@ -22,11 +18,17 @@
     <powermock-version>2.0.0</powermock-version>
   </properties>
 
+  <parent>
+    <groupId>ons.sdc.int.common</groupId>
+    <artifactId>common</artifactId>
+    <version>1.0.0</version>
+  </parent>
+
   <scm>
     <connection>scm:git:https://github.com/ONSdigital/census-rh-service</connection>
     <developerConnection>scm:git:https://github.com/ONSdigital/census-rh-service</developerConnection>
     <url>https://github.com/ONSdigital/census-rh-service</url>
-    <tag>rhsvc-0.1.2</tag>
+    <tag>rhsvc-0.0.0</tag>
   </scm>
 
   <profiles>
@@ -119,15 +121,15 @@
 
     <!-- ONS libraries -->
     <dependency>
-      <groupId>uk.gov.ons.ctp.integration.common</groupId>
+      <groupId>ons.sdc.int.common</groupId>
       <artifactId>framework</artifactId>
-      <version>0.0.79</version>
+      <version>${project.parent.version}</version>
     </dependency>
 
     <dependency>
-      <groupId>uk.gov.ons.ctp.integration.common</groupId>
+      <groupId>ons.sdc.int.common</groupId>
       <artifactId>event-publisher</artifactId>
-      <version>0.0.52</version>
+      <version>${project.parent.version}</version>
     </dependency>
 
     <dependency>
@@ -138,9 +140,9 @@
     </dependency>
 
     <dependency>
-      <groupId>uk.gov.ons.ctp.integration.common</groupId>
+      <groupId>ons.sdc.int.common</groupId>
       <artifactId>product-reference</artifactId>
-      <version>1.0.14</version>
+      <version>${project.parent.version}</version>
     </dependency>
 
     <dependency>
