--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>ons.sdc.int.app</groupId>
   <artifactId>rhsvc</artifactId>
+  <!-- this version will remain untouched by man or machine -->
   <version>0.0.0</version>
   <packaging>jar</packaging>
 
@@ -21,7 +22,8 @@
   <parent>
     <groupId>ons.sdc.int.common</groupId>
     <artifactId>common</artifactId>
-    <version>1.0.0</version>
+    <!-- change this to the version of ALL common libs to be used by this build -->
+    <version>1.0.1</version>
   </parent>
 
   <scm>
@@ -47,8 +49,7 @@
   </profiles>
 
   <dependencies>
-    <!-- Spring dependencies -->
-
+    <!-- PARENT MANAGED DEPENDENCIES -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
@@ -103,7 +104,6 @@
 
     <dependency>
       <groupId>io.springfox</groupId>
-      <!--<artifactId>springfox-swagger-ui</artifactId> -->
       <artifactId>springfox-swagger2</artifactId>
     </dependency>
 
@@ -117,43 +117,6 @@
       <artifactId>micrometer-registry-stackdriver</artifactId>
     </dependency>
 
-    <!-- SPRING END -->
-
-    <!-- ONS libraries -->
-    <dependency>
-      <groupId>ons.sdc.int.common</groupId>
-      <artifactId>framework</artifactId>
-      <version>${project.parent.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>ons.sdc.int.common</groupId>
-      <artifactId>event-publisher</artifactId>
-      <version>${project.parent.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>uk.gov.ons.ctp.integration.common</groupId>
-      <artifactId>test-framework</artifactId>
-      <version>0.0.20</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>ons.sdc.int.common</groupId>
-      <artifactId>product-reference</artifactId>
-      <version>${project.parent.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>uk.gov.ons.ctp.integration.common</groupId>
-      <artifactId>census-int-rate-limiter-client</artifactId>
-      <version>0.0.12</version>
-    </dependency>
-
-    <!-- ONS END -->
-
-    <!-- third party libraries -->
     <dependency>
       <groupId>ma.glasnost.orika</groupId>
       <artifactId>orika-eclipse-tools</artifactId>
@@ -167,19 +130,7 @@
     <dependency>
       <groupId>com.godaddy</groupId>
       <artifactId>logging</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>com.dkanejs.maven.plugins</groupId>
-      <artifactId>docker-compose-maven-plugin</artifactId>
-      <version>2.0.1</version>
-    </dependency>
-
-    <dependency>
-      <groupId>javax.xml.soap</groupId>
-      <artifactId>javax.xml.soap-api</artifactId>
-      <version>1.4.0</version>
-    </dependency>
+      </dependency>
 
     <dependency>
       <groupId>com.sun.xml.messaging.saaj</groupId>
@@ -195,14 +146,61 @@
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
     </dependency>
+    <!-- END PARENT MANAGED DEPENDENCIES -->
+
+    <!-- ONS DEPENDENCIES -->
+    <dependency>
+      <groupId>ons.sdc.int.common</groupId>
+      <artifactId>framework</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>ons.sdc.int.common</groupId>
+      <artifactId>event-publisher</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>ons.sdc.int.common</groupId>
+      <artifactId>product-reference</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>ons.sdc.int.common</groupId>
+      <artifactId>rate-limiter-client</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+    <!-- END OF ONS DEPENDENCIES -->
+
+    <!-- APP SPECIFIC DEPENDENCIES -->
+    <dependency>
+      <groupId>com.dkanejs.maven.plugins</groupId>
+      <artifactId>docker-compose-maven-plugin</artifactId>
+      <version>2.0.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.xml.soap</groupId>
+      <artifactId>javax.xml.soap-api</artifactId>
+      <version>1.4.0</version>
+    </dependency>
 
     <dependency>
       <groupId>uk.gov.service.notify</groupId>
       <artifactId>notifications-java-client</artifactId>
       <version>3.9.2-RELEASE</version>
     </dependency>
+    <!-- END OF APP SPECIFIC DEPENDENCIES -->
 
-    <!-- Testing -->
+    <!-- TESTING DEPENCIES -->
+    <dependency>
+      <groupId>ons.sdc.int.common</groupId>
+      <artifactId>test-framework</artifactId>
+      <version>${project.parent.version}</version>
+      <scope>test</scope>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework</groupId>
@@ -256,6 +254,7 @@
       <version>${powermock-version}</version>
       <scope>test</scope>
     </dependency>
+    <!-- END OF TESTING DEPENCIES -->
 
   </dependencies>
 
