--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ language: java
 jdk: openjdk11
 
 before_install:
-  - if [ "$TRAVIS_BRANCH" != "master" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
+  - if [ "$TRAVIS_BRANCH" != "main" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
       git checkout $TRAVIS_BRANCH;
     fi
   - cp .maven.settings.xml $HOME/.m2/settings.xml
