SOCINT-38 Disable spurious stderr junit output

--- a/pom.xml
+++ b/pom.xml
@@ -390,6 +390,9 @@
           <additionalClasspathElements>
             <additionalClasspathElement>${project.build.outputDirectory}</additionalClasspathElement>
           </additionalClasspathElements>
+          <systemPropertyVariables>
+            <java.util.logging.config.file>src/test/resources/junit-logging.properties</java.util.logging.config.file>
+        </systemPropertyVariables>
         </configuration>
         <executions>
           <execution>
