--- a/src/test/resources/junit-platform.properties
+++ b/src/test/resources/junit-platform.properties
@@ -1,5 +1,5 @@
-junit.jupiter.execution.parallel.enabled = true
-junit.jupiter.execution.parallel.mode.default = concurrent
-junit.jupiter.execution.parallel.mode.classes.default = concurrent
-junit.jupiter.execution.parallel.config.strategy = dynamic
-junit.jupiter.execution.parallel.config.dynamic.factor = 100
+
+# Disable configuration warning. 
+# JUnit writes this to stderr if this file doesn't exist.
+org.junit.platform.launcher.core.LauncherConfigurationParameters.level=WARNING
+org.junit.jupiter.engine.config.EnumConfigurationParameterConverter.level=WARNING
