--- a/src/test/resources/junit-logging.properties
+++ b/src/test/resources/junit-logging.properties
@@ -1,3 +1,4 @@
-junit.jupiter.execution.parallel.enabled = true
-junit.jupiter.execution.parallel.mode.default = concurrent
-junit.jupiter.execution.parallel.mode.classes.default = concurrent
+# Disable configuration warning. 
+# JUnit writes this to stderr if this file doesn't exist.
+org.junit.platform.launcher.core.LauncherConfigurationParameters.level=WARNING
+org.junit.jupiter.engine.config.EnumConfigurationParameterConverter.level=WARNING
