--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,8 @@
     <groupId>ons.sdc.int.common</groupId>
     <artifactId>common</artifactId>
     <!-- change this to the version of ALL common libs to be used by this build -->
-    <version>1.0.26</version>
+<!--    TODO Update-->
+    <version>1.0.28-SNAPSHOT</version>
   </parent>
 
   <scm>
@@ -51,6 +52,7 @@
   </profiles>
 
   <dependencies>
+
     <!-- PARENT MANAGED DEPENDENCIES -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -84,8 +86,8 @@
     </dependency>
 
     <dependency>
-      <groupId>org.springframework.integration</groupId>
-      <artifactId>spring-integration-amqp</artifactId>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-gcp-starter-pubsub</artifactId>
     </dependency>
 
     <dependency>
