--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -66,37 +66,17 @@ spring:
   cloud:
     gcp:
       pubsub:
-        project-id: sdc-rh-dev
+        project-id: dummy
+        emulator-host: localhost:8085
 
 queueconfig:
   case-subscription: case-rh-case
-  case-subscription-DLQ: case-rh-case-dlq
-  case-topic: event.case.update
+  case-topic: event_case-update
   uac-subscription: case-rh-uac
-  uac-subscription-DLQ: case-rh-uac-dlq
   uac-topic: event_uac-update
-  response-authentication-topic: event_uac-authenticate
   qid-filter-prefixes:
-     - 11
-     - 12
-     - 13
-     - 14
 
-#TODO Needed?
 messaging:
-  mismatched-queues-fatal: true
-  recovery-backoff:
-    initial: 2000
-    multiplier: 3
-    max: 30000
-  uac-case-listener:
-    processing-backoff:
-      initial: 5000
-      multiplier: 3
-      max: 45000
-    consuming-threads: 1
-    con-max-attempts: 3
-    prefetch-count: 1
   publish:
     max-attempts: 10
     timeout: 60
