--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -66,7 +66,7 @@ spring:
   cloud:
     gcp:
       pubsub:
-        project-id: dummy
+        project-id: local
         emulator-host: localhost:8085
 
 queueconfig:
