--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,7 @@
     <groupId>ons.sdc.int.common</groupId>
     <artifactId>common</artifactId>
     <!-- change this to the version of ALL common libs to be used by this build -->
-<!--    TODO Update-->
-    <version>1.0.28-SNAPSHOT</version>
+    <version>1.0.28</version>
   </parent>
 
   <scm>
