--- a/docker/docker-compose-rh-service.yml
+++ b/docker/docker-compose-rh-service.yml
@@ -8,9 +8,6 @@
 # It is also assumed that the GOOGLE_CLOUD_PROJECT environment variable is set. This should contain
 # the name of your GCP project, eg, sdc-rh-fred
 #
-# Note that 'spring.rabbitmq.host' is set to allow RH running in the container to connect to the host's
-# Rabbit port.
-#
 
 version: '3.8'
 services:
@@ -27,4 +24,5 @@ services:
     environment:
     - GOOGLE_APPLICATION_CREDENTIALS=/gcp/config/google-credentials.json
     - GOOGLE_CLOUD_PROJECT=${GOOGLE_CLOUD_PROJECT}
-    - spring.rabbitmq.host=host.docker.internal
+    - spring.profiles.active=local
+    - spring.cloud.gcp.pubsub.emulator-host=host.docker.internal:8085
