SOCINT-169 added docker compose config to fix eq error

--- a/docker/docker-compose-rh-service.yml
+++ b/docker/docker-compose-rh-service.yml
@@ -26,3 +26,4 @@ services:
     - GOOGLE_CLOUD_PROJECT=${GOOGLE_CLOUD_PROJECT}
     - spring.profiles.active=local
     - spring.cloud.gcp.pubsub.emulator-host=host.docker.internal:9808
+    - rate-limiter.rest-client-config.host=host.docker.internal
