SOCINT-193 Added sis structure to config

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,8 @@ logging:
   encryption:
     password: CENSUS
 
-collectionExerciseId : 34d7f3bb-91c9-45d0-bb2d-90afce4fc790
+sis:
+  collectionExerciseId: 34d7f3bb-91c9-45d0-bb2d-90afce4fc790
 
 management:
   endpoints:
