--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,7 @@ logging:
     password: CENSUS
 
 sis:
-  collectionExerciseId: 34d7f3bb-91c9-45d0-bb2d-90afce4fc790
+  collection-exercise-id: 34d7f3bb-91c9-45d0-bb2d-90afce4fc790
 
 management:
   endpoints:
