--- a/src/main/resources/application-greylodge.yml
+++ b/src/main/resources/application-greylodge.yml
@@ -4,3 +4,10 @@ logging:
     org.springframework: WARN
   profile: CLOUD
 
+cloud:
+  gcp:
+    pubsub:
+      subscriber:
+        flow-control:
+          max-outstanding-element-count: 100
+
