--- a/src/main/resources/application-preprod.yml
+++ b/src/main/resources/application-preprod.yml
@@ -3,3 +3,10 @@ logging:
     uk.gov.ons.ctp: INFO
     org.springframework: OFF
   profile: CLOUD
+
+cloud:
+  gcp:
+    pubsub:
+      subscriber:
+        flow-control:
+          max-outstanding-element-count: 100
