--- a/src/main/resources/application-whitelodge.yml
+++ b/src/main/resources/application-whitelodge.yml
@@ -3,4 +3,11 @@ logging:
     uk.gov.ons.ctp: INFO
     org.springframework: WARN
   profile: CLOUD
+
+cloud:
+  gcp:
+    pubsub:
+      subscriber:
+        flow-control:
+          max-outstanding-element-count: 100
   
