--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,9 +4,9 @@ logging:
     org.springframework: WARN
   profile: CLOUD
 
-cloud:
-  gcp:
-    pubsub:
-      subscriber:
-        flow-control:
-          max-outstanding-element-count: 100
+#cloud:
+#  gcp:
+#    pubsub:
+#      subscriber:
+#        flow-control:
+#          max-outstanding-element-count: 100
