--- a/src/main/resources/application-integration.yml
+++ b/src/main/resources/application-integration.yml
@@ -1,7 +1,6 @@
 logging:
   level:
-    uk.gov.ons.ctp.integration.contactcentresvc: INFO
-    uk.gov.ons.ctp.common: INFO
+    uk.gov.ons.ctp: INFO
     org.springframework: WARN
   profile: CLOUD
 
