--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -35,7 +35,8 @@ steps:
     - 'pipefail'
     - '-c'
     - |-
-      curl https://keybase.io/codecovsecurity/pgp_keys.asc | gpg --no-default-keyring --keyring trustedkeys.gpg --import \
+      apt-get install gpg
+      curl https://keybase.io/codecovsecurity/pgp_keys.asc | gpg --no-default-keyring --keyring trustedkeys.gpg --import
       curl -Os https://uploader.codecov.io/latest/alpine/codecov
       curl -Os https://uploader.codecov.io/latest/alpine/codecov.SHA256SUM
       curl -Os https://uploader.codecov.io/latest/alpine/codecov.SHA256SUM.sig
