--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -35,7 +35,7 @@ steps:
     - 'pipefail'
     - '-c'
     - |-
-      apt-get install gpg
+      apt-get install gnupgp
       curl https://keybase.io/codecovsecurity/pgp_keys.asc | gpg --no-default-keyring --keyring trustedkeys.gpg --import
       curl -Os https://uploader.codecov.io/latest/alpine/codecov
       curl -Os https://uploader.codecov.io/latest/alpine/codecov.SHA256SUM
