--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -42,7 +42,7 @@ steps:
       curl -Os https://uploader.codecov.io/latest/alpine/codecov.SHA256SUM
       curl -Os https://uploader.codecov.io/latest/alpine/codecov.SHA256SUM.sig
       gpgv codecov.SHA256SUM.sig codecov.SHA256SUM
-      sha1sum -a 256 -c codecov.SHA256SUM
+      sha256sum -c codecov.SHA256SUM
       chmod +x codecov
       ./codecov
 
