--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -38,17 +38,13 @@ steps:
       apt-get update
       apt-get install -y gnupg
       curl https://keybase.io/codecovsecurity/pgp_keys.asc | gpg --no-default-keyring --keyring trustedkeys.gpg --import
-      curl -Os https://uploader.codecov.io/latest/alpine/codecov
-      curl -Os https://uploader.codecov.io/latest/alpine/codecov.SHA256SUM
-      curl -Os https://uploader.codecov.io/latest/alpine/codecov.SHA256SUM.sig
+      curl -Os https://uploader.codecov.io/latest/linux/codecov
+      curl -Os https://uploader.codecov.io/latest/linux/codecov.SHA256SUM
+      curl -Os https://uploader.codecov.io/latest/linux/codecov.SHA256SUM.sig
       gpgv codecov.SHA256SUM.sig codecov.SHA256SUM
       sha256sum -c codecov.SHA256SUM
-      ls -l
-      pwd
-      chmod +x /workspace/codecov
-      echo "fart"
-      ls -l
-      /workspace/codecov
+      chmod +x ./codecov
+      ./codecov
 
 images: [ 'europe-west2-docker.pkg.dev/ons-ci-int/int-docker-snapshot/rh-service:$BRANCH_NAME-$SHORT_SHA' ]
 
