--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -48,9 +48,9 @@ steps:
 
 images: [ 'europe-west2-docker.pkg.dev/ons-ci-int/int-docker-snapshot/rh-service:$BRANCH_NAME-$SHORT_SHA' ]
 
-availableSecrets:
-  secretManager:
-    - versionName: projects/415467542055/secrets/SDC_INT_RH_SERVICE_CODECOV/versions/1
-      env: SDC_INT_RH_SERVICE_CODECOV
+  #availableSecrets:
+  # secretManager:
+  #  - versionName: projects/415467542055/secrets/SDC_INT_RH_SERVICE_CODECOV/versions/1
+  #    env: SDC_INT_RH_SERVICE_CODECOV
 
 
