--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -46,7 +46,7 @@ steps:
       sha256sum -c codecov.SHA256SUM
       chmod +x ./codecov
       env
-      ./codecov -t $$SDC_INT_RH_SERVICE_CODECOV
+      ./codecov -t $$SDC_INT_RH_SERVICE_CODECOV -C $COMMIT_SHA
 
 images: [ 'europe-west2-docker.pkg.dev/ons-ci-int/int-docker-snapshot/rh-service:$BRANCH_NAME-$SHORT_SHA' ]
 
