--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -45,7 +45,8 @@ steps:
       gpgv codecov.SHA256SUM.sig codecov.SHA256SUM
       sha256sum -c codecov.SHA256SUM
       chmod +x ./codecov
-      env
+      git status
+      CODECOV_SLUG=ONSdigital/sdc-int-rh-service
       ./codecov -t $$SDC_INT_RH_SERVICE_CODECOV -C $COMMIT_SHA
 
 images: [ 'europe-west2-docker.pkg.dev/ons-ci-int/int-docker-snapshot/rh-service:$BRANCH_NAME-$SHORT_SHA' ]
