--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -38,6 +38,7 @@ steps:
     - |-
       apt-get update
       apt-get install -y gnupg
+      apt-get install -y git
       curl https://keybase.io/codecovsecurity/pgp_keys.asc | gpg --no-default-keyring --keyring trustedkeys.gpg --import
       curl -Os https://uploader.codecov.io/latest/linux/codecov
       curl -Os https://uploader.codecov.io/latest/linux/codecov.SHA256SUM
@@ -51,7 +52,7 @@ images: [ 'europe-west2-docker.pkg.dev/ons-ci-int/int-docker-snapshot/rh-service
 
 availableSecrets:
   secretManager:
-    - versionName: projects/415467542055/secrets/SDC_INT_RH_SERVICE_CODECOV/versions/1
+    - versionName: projects/415467542055/secrets/SDC_INT_RH_SERVICE_CODECOV/versions/2
       env: SDC_INT_RH_SERVICE_CODECOV
 
 
