--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -28,8 +28,31 @@ steps:
     id: Save M2 Cache
     args: ['cp', 'm2.tar.gz', 'gs://ons-ci-int-cloudbuild-maven-cache/m2.tar.gz']
 
+  - name: 'gcr.io/cloud-builders/curl'
+    secretEnv: [ SDC_INT_RH_SERVICE_CODECOV ]
+    entrypoint: bash
+    args:
+    - '-eEuo'
+    - 'pipefail'
+    - '-c'
+    - |-
+      apt-get update
+      apt-get install -y gnupg
+      apt-get install -y git
+      curl https://keybase.io/codecovsecurity/pgp_keys.asc | gpg --no-default-keyring --keyring trustedkeys.gpg --import
+      curl -Os https://uploader.codecov.io/latest/linux/codecov
+      curl -Os https://uploader.codecov.io/latest/linux/codecov.SHA256SUM
+      curl -Os https://uploader.codecov.io/latest/linux/codecov.SHA256SUM.sig
+      gpgv codecov.SHA256SUM.sig codecov.SHA256SUM
+      sha256sum -c codecov.SHA256SUM
+      chmod +x ./codecov
+      ./codecov -t $$SDC_INT_RH_SERVICE_CODECOV -C $COMMIT_SHA -r "ONSdigital/sdc-int-rh-service"
+
 images: [ 'europe-west2-docker.pkg.dev/ons-ci-int/int-docker-snapshot/rh-service:$BRANCH_NAME-$SHORT_SHA' ]
 
-
+availableSecrets:
+  secretManager:
+    - versionName: projects/415467542055/secrets/SDC_INT_RH_SERVICE_CODECOV/versions/2
+      env: SDC_INT_RH_SERVICE_CODECOV
 
 
