SOCINT-291 property driven firestore projectId

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -66,6 +66,8 @@ spring:
     timeout-per-shutdown-phase: 30s
   cloud:
     gcp:
+      firestore:
+        project-id: ${GOOGLE_CLOUD_PROJECT}
       pubsub:
         project-id: local
 
