--- a/src/test/resources/application-test-containers-firestore.yml
+++ b/src/test/resources/application-test-containers-firestore.yml
@@ -1,4 +1,3 @@
-GOOGLE_CLOUD_PROJECT: sdc-rh-test
 
 management:
   health:
@@ -12,6 +11,8 @@ management:
 spring:
   cloud:
     gcp:
+      firestore:
+        project-id: sdc-rh-test
       pubsub:
         enabled: false
         
