SOCINT-291 control firestore replacement for each new test class

--- a/src/test/resources/application-test-containers-firestore.yml
+++ b/src/test/resources/application-test-containers-firestore.yml
@@ -6,14 +6,14 @@ management:
   metrics:
     export:
       stackdriver:
-        project-id: sdc-rh-test
+        project-id: rh-testcontainers
         enabled: false
         
 spring:
   cloud:
     gcp:
       firestore:
-        project-id: sdc-rh-test
+        project-id: rh-testcontainers
       pubsub:
         enabled: false
         
