--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <groupId>ons.sdc.int.common</groupId>
     <artifactId>common</artifactId>
     <!-- change this to the version of ALL common libs to be used by this build -->
-    <version>1.0.77-338-SNAPSHOT</version>
+    <version>1.0.77-SNAPSHOT</version>
   </parent>
 
   <scm>
