--- a/docker/docker-compose-rh-service.yml
+++ b/docker/docker-compose-rh-service.yml
@@ -27,3 +27,4 @@ services:
     - spring.profiles.active=local
     - spring.cloud.gcp.pubsub.emulator-host=host.docker.internal:9808
     - rate-limiter.rest-client-config.host=host.docker.internal
+    - JAVA_TOOL_OPTIONS="--add-opens java.base/java.lang=ALL-UNNAMED"
